--- a/templates/main.html
+++ b/templates/main.html
@@ -10,6 +10,11 @@
 </head>
 <body>
 
+<div style="margin: auto; width: 50%; display: flex; flex-direction: column; padding-top: 5em">
+<h1>Data</h1>
+</div>
+
+
 <!--Owner is 0-->
 <div style="margin: auto; width: 50%; display: flex; flex-direction: column; padding-top: 5em">
     {{tables[0]}}
@@ -69,6 +74,39 @@
         <input type="submit" value="prev">
     </form>
 </div>
+
+<div style="margin: auto; width: 50%; display: flex; flex-direction: column; padding-top: 5em">
+    <form method="post" action="/delete_owner">
+        <label for="text_owner">Enter id of the owner to delete</label>
+        <input type="text" id="text_owner" name="id">
+        <input type="submit">
+    </form>
+</div>
+
+<div style="margin: auto; width: 50%; display: flex; flex-direction: column; padding-top: 5em">
+    <form method="post" action="/delete_passport">
+        <label for="text_passport">Enter id of the passport to delete</label>
+        <input type="text" id="text_passport" name="id">
+        <input type="submit">
+    </form>
+</div>
+
+<div style="margin: auto; width: 50%; display: flex; flex-direction: column; padding-top: 5em">
+    <form method="post" action="/delete_inspector">
+        <label for="text_inspector">Enter id of the inspector to delete</label>
+        <input type="text" id="text_inspector" name="id">
+        <input type="submit">
+    </form>
+</div>
+
+<div style="margin: auto; width: 50%; display: flex; flex-direction: column; padding-top: 5em">
+    <form method="post" action="/delete_inspection">
+        <label for="text_inspection">Enter id of the inspection to delete</label>
+        <input type="text" id="text_inspection" name="id">
+        <input type="submit">
+    </form>
+</div>
+
 
 
 </body>
