--- a/templates/main.html
+++ b/templates/main.html
@@ -81,6 +81,21 @@
         <input type="text" id="text_owner" name="id">
         <input type="submit">
     </form>
+    <form method="post" action="/insert_owner">
+        <label for="insert_owner_id"></label>
+        <input type="text" id="insert_owner_id" name="id">
+        <label for="insert_owner_fullName"></label>
+        <input type="text" id="insert_owner_fullName" name="id">
+        <label for="insert_owner_address"></label>
+        <input type="text" id="insert_owner_address" name="id">
+        <label for="insert_owner_year"></label>
+        <input type="text" id="insert_owner_year" name="id">
+        <label for="insert_owner_sex"></label>
+        <input type="text" id="insert_owner_sex" name="id">
+        <label for="insert_owner_license"></label>
+        <input type="text" id="insert_owner_license" name="id">
+        <input type="submit">
+    </form>
 </div>
 
 <div style="margin: auto; width: 50%; display: flex; flex-direction: column; padding-top: 5em">
