--- a/templates/main.html
+++ b/templates/main.html
@@ -11,7 +11,7 @@
 <body>
 
 <div style="margin: auto; width: 50%; display: flex; flex-direction: column; padding-top: 5em">
-<h1>Data</h1>
+    <h1>Data</h1>
 </div>
 
 
@@ -76,26 +76,30 @@
 </div>
 
 <div style="margin: auto; width: 50%; display: flex; flex-direction: column; padding-top: 5em">
-    <form method="post" action="/delete_owner">
-        <label for="text_owner">Enter id of the owner to delete</label>
-        <input type="text" id="text_owner" name="id">
-        <input type="submit">
-    </form>
-    <form method="post" action="/insert_owner">
-        <label for="insert_owner_id"></label>
-        <input type="text" id="insert_owner_id" name="id">
-        <label for="insert_owner_fullName"></label>
-        <input type="text" id="insert_owner_fullName" name="id">
-        <label for="insert_owner_address"></label>
-        <input type="text" id="insert_owner_address" name="id">
-        <label for="insert_owner_year"></label>
-        <input type="text" id="insert_owner_year" name="id">
-        <label for="insert_owner_sex"></label>
-        <input type="text" id="insert_owner_sex" name="id">
-        <label for="insert_owner_license"></label>
-        <input type="text" id="insert_owner_license" name="id">
-        <input type="submit">
-    </form>
+    <div style="margin: auto; width: 90%; background: lightcoral; display: flex; flex-direction: column; padding-top: 0.5%">
+        <h2>Delete Owner</h2>
+        <form method="post" action="/delete_owner">
+            <label for="text_owner">Enter id of the owner to delete</label>
+            <input type="text" id="text_owner" name="id">
+            <input type="submit">
+        </form>
+    </div>
+    <div style="margin: auto; width: 90%; background: lightblue; display: flex; flex-direction: column; padding-top: 0.5%">
+        <h2>Add Owner</h2>
+        <form method="post" action="/insert_owner">
+            <label for="insert_owner_fullName">New owner full name</label>
+            <input type="text" id="insert_owner_fullName" name="fullName"><br>
+            <label for="insert_owner_address">New owner address</label>
+            <input type="text" id="insert_owner_address" name="address"><br>
+            <label for="insert_owner_year">New owner year</label>
+            <input type="text" id="insert_owner_year" name="year"><br>
+            <label for="insert_owner_sex">New owner sex (male/female)</label>
+            <input type="text" id="insert_owner_sex" name="sex"><br>
+            <label for="insert_owner_license">New owner licence</label>
+            <input type="text" id="insert_owner_license" name="license"><br>
+            <input type="submit">
+        </form>
+    </div>
 </div>
 
 <div style="margin: auto; width: 50%; display: flex; flex-direction: column; padding-top: 5em">
@@ -121,7 +125,6 @@
         <input type="submit">
     </form>
 </div>
-
 
 
 </body>
