--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,10 @@
     <form method="post" action="/open/table/inspection">
         <input type="submit" value="inspection table">
     </form>
+
+    <form method="post" action="/additional_tables">
+        <input type="submit" value="additional tables">
+    </form>
 </div>
 
 </body>
