number of inspection by period

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,10 @@
     <form method="post" action="/additional_tables">
         <input type="submit" value="additional tables">
     </form>
+
+    <form method="post" action="/inspections_by_date">
+        <input type="submit" value="inspections_by_date">
+    </form>
 </div>
 
 </body>
